--- a/index.html
+++ b/index.html
@@ -1,1 +1,251 @@
-Hello World
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Currículum Vitae - Técnico Desarrollador de Software</title>
+    <style>
+        /* General reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f9f4;
+            color: #333;
+            line-height: 1.6;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 30px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            color: #1a7f56;
+            font-size: 2.5rem;
+            margin-bottom: 10px;
+        }
+        h2 {
+            color: #1a7f56;
+            margin-bottom: 15px;
+            font-size: 1.8rem;
+        }
+
+        .section {
+            margin-bottom: 30px;
+        }
+
+        /* Header section */
+        .header {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .header p {
+            font-size: 1.2rem;
+            color: #555;
+            margin-bottom: 20px;
+        }
+        .contact-info ul {
+            list-style: none;
+            padding: 0;
+            text-align: center;
+        }
+        .contact-info ul li {
+            margin: 5px 0;
+        }
+        .contact-info a {
+            color: #1a7f56;
+            text-decoration: none;
+        }
+
+        /* Animations */
+        @keyframes fadeIn {
+            0% { opacity: 0; transform: translateY(20px); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
+
+        .fade-in {
+            animation: fadeIn 0.8s ease-out;
+        }
+
+        /* Skill Section */
+        .skills {
+            display: flex;
+            justify-content: space-between;
+        }
+        .skills div {
+            width: 45%;
+        }
+
+        .skills ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .skills ul li {
+            margin-bottom: 10px;
+        }
+
+        /* Colors */
+        .green-bg {
+            background-color: #d0f1e4;
+            padding: 10px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+
+        /* Mobile responsive */
+        @media (max-width: 768px) {
+            .skills {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+        }
+    </style>
+</head>
+<body>
+
+<div class="container fade-in">
+
+    <!-- Header Section -->
+    <div class="header">
+        <h1>Lourdes Isabel Fuentes Ruiz</h1>
+        <p>Bachiller en Ciencia y Letras</p>
+
+        <div class="contact-info">
+            <ul>
+                <li>Teléfono: 5485621</li>
+                <li>Email: <a href="isa.ruiz123fuentes@gmail.com">isa.ruiz123fuentes@gmail.com</a></li>
+                <li>LinkedIn: <a href="https://linkedin.com/in/lourdesfuentes" target="_blank">linkedin.com/in/lourdesfuentes</a></li>
+                <li>GitHub: <a href="https://github.com/LFuentes12" target="_blank">github.com/lourdesfuentes</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Sobre mí -->
+    <div class="section fade-in">
+        <h2>Sobre Mí</h2>
+        <p>He destacado por mi capacidad para el autoaprendizaje y la formacion permanente, asi como por mi trabajo orientado a resultados concretos.Me adapto bien a grupos de trabajo abiertos y flexibles.Soy una persona proactiva y dispuesta a dar un trabajo de calidad . Para mi persona es fundamental que el trato al cliente sea humano y respetuoso.</p>
+    </div>
+
+    <!-- Experiencia Laboral -->
+    <div class="section fade-in">
+        <h2>Experiencia Laboral</h2>
+        <div class="green-bg">
+            <h3>Agente de Call center 2024- actualidad</h3>
+            <ul>
+                <li>Atencion al cliente por diferentes canales.</li>
+                <li>Birndar informacion sobre productos o servicios de la empresa.</li>
+                <li>Registrar reclamos.</li>
+                <li>Verificar actualizaciones</li>
+            </ul>
+        </div>
+        <div class="green-bg">
+            <h3>Secretaria de ONG Julio 2023-Julio2024</h3>
+            <ul>
+                <li>Redaccion de documento y oficios para autoridades, empresas, provedores</li>
+                <li>Agenda de citas externas y internas medicas y psicologicas, controal academico.</li>
+                <li>Planificacion de actividades, horarios, eventos.</li>
+                <li>Cotizacion de insumos.</li>
+                <li>Llenados de fichas de evaluacion,medicas,educativas.</li>
+                <li>Gestion de tiempo, documemtos, y agendas.</li>
+            </ul>
+        </div>
+        <div class="green-bg">
+            <h3>Digitador SIGSA WEB-MSPAS Julio 2021-Julio 2023</h3>
+            <ul>
+                <li>Ingreso de datos a los diferentes programas de SIGSA WEB</li>
+                <li>Planificacion de actividades para la circulacion de informacion SIGSAWEB.</li>
+                <li>Redsaccion de cartas, conocimientos y actas.</li>
+                <li>Servicio directo al personal de salud y poblacion en general.</li>
+                <li>Generacion de informes mensuales de los programas de nutricion, inmunizacion,morbilidades.</li>
+                <li>Promociones y gestion de programas, documentos, y campañas.</li>
+                <li> Apoyo a diferentes areas de P/S</li>
+            </ul>
+        </div>
+    </div>
+    <div class="green-bg">
+        <h3>Tutor de Quimica</h3>
+        <ul>
+            <li>Planificacion de clases</li>
+            <li>Creacion de material didactico.</li>
+            <li>Manejo de instrumentos de aprendizaje</li>
+        </ul>
+    </div>
+        
+    </div>
+
+    <!-- Estudios -->
+    <div class="section fade-in">
+        <h2>Estudios</h2>
+        <div class="green-bg">
+            <h3>Bachiller en Ciencias y Letras con Orientacion en Medicina Colegio Doctor Rodolfo Robles(2018)</h3>
+        </div>
+        <div class="green-bg">
+            <h3>Ingenieria en Gestion Ambiental Local Universidad de San Carlos de GUatemala CUNO (2019-actual)</h3>
+        </div>
+        <div class="green-bg">
+            <h3>Tecnico en Desarrollo de Software Universidad Galileo (actualmente)</h3>
+        </div>
+        <div class="green-bg">
+            <h3>Analisis de datos INTEPCAP (2021)</h3>
+        </div>
+        <div class="green-bg">
+            <h3>Asesor de Cultura Ambiental (2020)</h3>
+        </div>
+    </div>
+
+    <!-- Aptitudes y Competencias -->
+    <div class="section fade-in">
+        <h2>Aptitudes y Competencias</h2>
+        <div class="skills">
+            <div>
+                <h3>Aptitudes</h3>
+                <ul>
+                    <li>Proactivo</li>
+                    <li>Trabajo en equipo</li>
+                    <li>Trabajo bajo presion</li>
+                    <li>Adaptabilidad</li>
+                    <li>Lectura analitica</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Competencias</h3>
+                <ul>
+                    <li>Manejo de paquetes de office</li>
+                    <li>Manejo de ARGIS</li>
+                    <li>Manejo de herramientas de planificacion</li>
+                    <li> Multitasking</li>
+                    <li> Manejo de herramientas de reuniones virtuales</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <!-- Idiomas -->
+    <div class="section fade-in">
+        <h2>Idiomas</h2>
+        <ul>
+            <li>Español: Nativo</li>
+            <li>Inglés: B1</li>
+            <li>Lenguaje de señas Guatemaltecas: Intermedio</li>
+        </ul>
+    </div>
+
+    <!-- Referencias -->
+    <div class="section fade-in">
+        <h2>Referencias</h2>
+        <p>Disponibles bajo solicitud.</p>
+    </div>
+
+</div>
+
+</body>
+</html>
+
